--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.19.0",
+    "flatpickr": "^4.6.13",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
-    "simplelightbox": "^2.14.0"
+    "notiflix": "^3.2.6"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
